Services fix css cards

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -64,3 +64,9 @@ h5 {
   padding-inline: 0.5rem;
   opacity: 0.8;
 }
+.green_circle {
+  border-radius: 50%;
+  background-color: #daeced;
+  padding: 4px 9px;
+  font-size: 18px;
+}
