Green bullets about section

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -40,16 +40,27 @@ h5 {
   background-color: #058283;
   color: white;
 }
+.btn_green:hover {
+  background-color: #058283;
+  color: white;
+}
 .btn_whitebg {
-  background-color: white;
+  background-color: none;
   color: #058283;
   border: 1px solid #058283;
+}
+.btn_whitebg:hover {
+  background-color: #058283;
+  color: white;
 }
 .btn_transparent {
   color: white;
   border: 1px solid #058283;
 }
-
+.btn_transparent:hover {
+  background-color: #058283;
+  color: white;
+}
 .highlighted_green {
   color: #058283;
   background-color: #d5e7e8;
